--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,2 +1,118 @@
 @import 'SASS/layout';
 @import 'SASS/formulario';
+@import 'SASS/modal';
+
+/*---LOGO_CARGA---*/
+.loader{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  opacity: 0.8;
+  background-color:rgb(249,249,249);
+  display:flex;
+  align-items:center;
+  justify-content: center;
+}
+.icono-loader{
+  animation:rotar 1s infinite;
+  width:13em;
+}
+
+/*------ ANIMACIONES -----*/
+@keyframes rotar {
+  0%{transform:rotate(0);}
+  100%{transform:rotate(360deg);}
+}
+
+/*------ CLASES GLOBALES ------*/
+.main-content{
+  overflow:auto;
+}
+.section{
+  display:none;
+}
+.divider{
+  border-bottom:1.5px solid $divider-color;
+  margin:25px;
+}
+
+.icono-accion{
+  cursor:pointer;
+}
+.border-secundario{border:1px solid $light-primary-color}
+
+.logout{cursor:pointer;}
+.dropdown-menu{padding:25px;}
+
+.group-around{
+  display:flex;
+  justify-content: space-around;
+  @media(min-width:576px) and (max-width:768px){
+    flex-direction:column;
+    & .btn{
+      margin-bottom:5px;
+    }
+  }
+}
+
+.panel-dbase{
+  border-radius:10px;
+  padding:20px;
+  -webkit-box-shadow: 0 0 16px -2px rgba(0,0,0,0.51);
+  -moz-box-shadow: 0 0 16px -2px rgba(0,0,0,0.51);
+  box-shadow: 0 0 16px -2px rgba(0,0,0,0.51);
+  &.white{background-color:white;}
+}
+/*----BOTONES-----*/
+
+.btn-principal{
+  background-color:$color-resaltado;
+  color:$texto;
+  &:hover{
+    background-color:$dark-color-resaltado;
+  }
+}
+.btn-primary-color{
+  background-color:$primary-color;
+  color:$texto;
+  &:hover{
+    background-color:$dark-primary-color;
+  }
+}
+.btn-clarito{
+  background-color:$light-primary-color;
+  color:$texto;
+  &[type='submit']:hover {
+    transform: scale(1.1);
+  }
+}
+.btn,button{
+  &.outline{
+    border:solid 1px $color-resaltado;
+    background-color:transparent;
+    color:$color-resaltado;
+    &:hover{
+      background-color:$color-resaltado;
+      color:white;
+    }
+  }
+  &:focus{box-shadow: none;outline: none}
+}
+.btn-50{ width:50%;  }
+.btn-100{ width:100%; }
+
+.btn-form{
+  color:$texto;
+  font-size:1.2em;
+}
+.btn-cancel{
+  background-color:$cancel-color;
+  &:hover{background-color:$dark-cancel-color}
+}
+.btn-save{
+  background:$save-color;
+  &:hover{background-color:$dark-save-color}
+}
