--- a/public/css/SASS/_variables.scss
+++ b/public/css/SASS/_variables.scss
@@ -20,3 +20,6 @@ $media:'only screen';
 $pantallaSmall:'(max-width:758px)';
 $pantallaMedia:'(max-width:990px)';
 $pantallaGrande:'(min-width:992px)';
+
+$fuente:Comfortaa,cursive;
+$fuente_texto:Lato,sans-serif;
