--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -27,10 +27,12 @@
 }
 
 /*--- FONDO ---*/
-#admin_content {
+.background_image {
   background-image: url("../imagenes/fondos/cesped.jpg");
-  min-height: 100%;
   opacity: 0.7;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 /*--- HOME ---*/
@@ -70,6 +72,9 @@
 }
 
 /*--- EQUIPO TECNICO ---*/
+.panel_header {
+  max-height: calc(30% - 40px);
+}
 .panel_header .panel_title {
   margin: 20px 0;
   text-transform: uppercase;
@@ -84,6 +89,36 @@
   text-decoration: underline;
 }
 
+.panel_body {
+  margin-top: 25px;
+  height: calc(70% - 25px);
+}
+
+#tecnicos_content {
+  overflow-y: auto;
+  margin: 0 20px;
+}
+#tecnicos_content .mister_info {
+  margin: 10px;
+  min-width: 200px;
+  height: 250px;
+  border: solid 1px black;
+}
+
+#add_tecnico_button {
+  border: solid 1px black;
+  color: black;
+  padding: 5px;
+  float: right;
+  font-size: 2em;
+  border-radius: 5px;
+  cursor: pointer;
+}
+#add_tecnico_button:hover {
+  background-color: black;
+  color: white;
+}
+
 /*
 * Cambio de secciones
 */
@@ -94,7 +129,7 @@
   padding: 0;
 }
 .admin_panel.animate {
-  max-width: 100%;
+  max-width: 83.3%;
   padding: 0 15px;
 }
 .admin_panel div.animated {
