--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -37,8 +37,11 @@
 
 /*--- HOME ---*/
 .admin_home {
-  height: calc(100vh - 80px);
   padding: 80px 0;
+}
+
+#home_calendar {
+  height: calc(100vh - 80px);
 }
 
 .resultados_content {
@@ -76,9 +79,12 @@
   max-height: calc(30% - 40px);
 }
 .panel_header .panel_title {
-  margin: 20px 0;
   text-transform: uppercase;
   font-size: 2em;
+  clear: both;
+}
+.panel_header .panel_title .cs-select {
+  margin-right: 10px;
 }
 .panel_header .panel_description {
   font-family: Lato, sans-serif;
@@ -95,14 +101,45 @@
 }
 
 #tecnicos_content {
-  overflow-y: auto;
   margin: 0 20px;
 }
-#tecnicos_content .mister_info {
-  margin: 10px;
-  min-width: 200px;
-  height: 250px;
-  border: solid 1px black;
+
+.mister_info {
+  margin: 15px 0;
+  height: 350px;
+  background-color: white;
+  transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), -webkit-transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  cursor: pointer;
+  border-radius: 4px;
+}
+@media only screen and (max-width:758px) {
+  .mister_info {
+    height: 250px;
+  }
+}
+@media only screen and (max-width:990px) {
+  .mister_info {
+    height: 300px;
+  }
+}
+.mister_info:hover {
+  transform: scale(1.006, 1.006);
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+}
+.mister_info .mister_image {
+  text-align: center;
+  height: 65%;
+}
+.mister_info .mister_image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 4px 4px 0 0;
+}
+.mister_info .mister_desc {
+  text-align: center;
+}
+.mister_info .mister_desc .mister_name {
+  margin: 15px 0;
 }
 
 #add_tecnico_button {
@@ -119,6 +156,40 @@
   color: white;
 }
 
+/*--- EQUIPO ---*/
+.team_header_tab {
+  text-transform: uppercase;
+  padding: 10px;
+  margin: 10px;
+  cursor: pointer;
+}
+@media only screen and (max-width:758px) {
+  .team_header_tab {
+    font-size: 12px;
+    margin: 10px 5px;
+    padding: 0;
+  }
+}
+.team_header_tab.active:after {
+  width: 100%;
+}
+.team_header_tab:hover:after {
+  width: 100%;
+}
+.team_header_tab:after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #000;
+  transition: width 0.3s;
+}
+
+.team_detail_content {
+  opacity: 0;
+  display: none;
+}
+
 /*
 * Cambio de secciones
 */
@@ -130,7 +201,12 @@
 }
 .admin_panel.animate {
   max-width: 83.3%;
-  padding: 0 15px;
+  padding: 20px 15px;
+}
+@media only screen and (max-width:758px) {
+  .admin_panel.animate {
+    max-width: 100%;
+  }
 }
 .admin_panel div.animated {
   opacity: 0;
