--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -38,7 +38,10 @@
   border-bottom:1.5px solid $divider-color;
   margin:25px;
 }
-
+.info-divider{
+  border-bottom:1.5px solid $divider-color;
+  margin:10px 40px;
+}
 .icono-accion{
   cursor:pointer;
 }
@@ -57,7 +60,11 @@
     }
   }
 }
-
+div.cs-select{
+  &.cs-skin-underline{
+    font-size:1em;
+  }
+}
 .panel-dbase{
   border-radius:10px;
   padding:20px;
