app antes de cambio de layout

--- a/public/css/SASS/_variables.scss
+++ b/public/css/SASS/_variables.scss
@@ -2,6 +2,7 @@ $dark-primary-color:#00796B;
 $light-primary-color:#B2DFDB;
 $primary-color:#009688;
 $texto:white;
+$textoCabecera:#757b88;
 $primary-text:#212121;
 $secondary-text:#757575;
 $divider-color:#BDBDBD;
@@ -11,6 +12,10 @@ $cancel-color:#c36868;
 $dark-cancel-color:#884a4a;
 $save-color:$primary-color;
 $dark-save-color:$dark-primary-color;
+
+$primeraCabecera:#3f4558;
+$segundaCabecera:#4b5266;
+$textoSegundaCabecera:#c0c8da;
 
 $imagen-inicio-fondo:url('../../imagenes/fondos/fondo-equipo.jpg');
 
