--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -21,12 +21,6 @@
   width:13em;
 }
 
-/*------ ANIMACIONES -----*/
-@keyframes rotar {
-  0%{transform:rotate(0);}
-  100%{transform:rotate(360deg);}
-}
-
 /*------ CLASES GLOBALES ------*/
 .main-content{
   overflow:auto;
@@ -43,6 +37,9 @@
   margin:10px 40px;
 }
 .icono-accion{
+  cursor:pointer;
+}
+.icon{
   cursor:pointer;
 }
 .border-secundario{border:1px solid $light-primary-color}
@@ -122,4 +119,34 @@ div.cs-select{
 .btn-save{
   background:$save-color;
   &:hover{background-color:$dark-save-color}
+}
+
+/*---- ANIMACIONES ---*/
+@keyframes pulse{
+  0%{
+    opacity:0;
+    transform:scale(0);
+  }
+  50%{
+    transform:scale(.99)
+  }
+  100%{
+    opacity:1;
+    transform:scale(1);
+    visibility:visible;
+  }
+}
+@keyframes radius-in{
+  from{
+    animation-timing-function: cubic-bezier(.4,0,.2,1);
+    transform:scale(1);
+  }
+  to{
+    transform:scale(1);
+  }
+}
+
+@keyframes rotar {
+  0%{transform:rotate(0);}
+  100%{transform:rotate(360deg);}
 }
