--- a/public/css/SASS/layout.scss
+++ b/public/css/SASS/layout.scss
@@ -5,7 +5,7 @@ html,body{
   color:$primary-text;
   height:100%;
   overflow:scroll;
-  background-color:#ebf5f4f2;
+  background-color:#fafafa;
 }
 /*--- CABECERA ---*/
 .header{
@@ -76,13 +76,13 @@ html,body{
 
 /*--- CONTENIDO ---*/
 .main_content{
-  padding-top:80px;
+  padding-top:160px;
 }
 
 .main_panel{
   background-color:#e9ebe6e6;
   box-shadow: 1px 11px 33px -9px rgba(0,0,0,0.75);
-  height:100%;
+  min-height:calc(100vh - 240px);
 }
 
 /*--- MENU ---*/
