--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -36,14 +36,6 @@
 }
 
 /*--- HOME ---*/
-.admin_home {
-  padding: 80px 0;
-}
-
-#home_calendar {
-  height: calc(100vh - 80px);
-}
-
 .resultados_content {
   margin: 20px 0;
   color: black;
@@ -75,16 +67,10 @@
 }
 
 /*--- EQUIPO TECNICO ---*/
-.panel_header {
-  max-height: calc(30% - 40px);
-}
 .panel_header .panel_title {
   text-transform: uppercase;
   font-size: 2em;
   clear: both;
-}
-.panel_header .panel_title .cs-select {
-  margin-right: 10px;
 }
 .panel_header .panel_description {
   font-family: Lato, sans-serif;
@@ -190,6 +176,120 @@
   display: none;
 }
 
+.panel_select_overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  background-color: rgba(255, 255, 255, 0.96);
+  opacity: 0;
+  visibility: hidden;
+  transform: perspective(100vw) translate3d(0, 0, -200px);
+  transition: opacity 0.4s, transform 0.4s;
+}
+.panel_select_overlay.animate {
+  opacity: 0.9;
+  visibility: visible;
+  transform: perspective(100vw) translate3d(0, 0, 0);
+}
+.panel_select_overlay .selector_options {
+  font-size: 1.3em;
+  font-weight: bold;
+}
+.panel_select_overlay .selector_options ul {
+  list-style-type: none;
+  padding: 0;
+}
+.panel_select_overlay .selector_options .option {
+  cursor: pointer;
+  color: #95948f;
+}
+.panel_select_overlay .selector_options .option.selected {
+  color: darkorange;
+}
+.panel_select_overlay .selector_title {
+  color: #bbb9b4;
+  text-transform: uppercase;
+  font-size: 0.9em;
+}
+.panel_select_overlay .first-row {
+  text-align: right;
+}
+
+#select_team_icon {
+  border-radius: 50%;
+  border: solid 0.08em;
+  padding: 7px;
+  position: relative;
+  height: 40px;
+  width: 40px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+#select_team_icon:hover {
+  transform: scale(1.08, 1.08);
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.38);
+}
+
+/*--- MATERIAL ---*/
+.material-card {
+  width: 350px;
+  cursor: pointer;
+  margin-bottom: 10px;
+  height: 170px;
+  transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), -webkit-transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.material-card:hover {
+  transform: scale(1.006, 1.006);
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+}
+.material-card:hover:before {
+  opacity: 0.04;
+}
+.material-card:hover .card-img.fondo .material-icons:before {
+  opacity: 0.04;
+  transform: scale(1.7);
+}
+.material-card:before, .material-card:after {
+  content: "";
+  transition: opacity 0.6s linear;
+  background-color: #000;
+  opacity: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+.material-card .card-img.fondo {
+  position: absolute;
+  width: 65px;
+  height: 65px;
+  left: calc(50% - 32px);
+  top: calc(50% - 32px);
+}
+.material-card .card-img.fondo .material-icons {
+  padding: 8px;
+  cursor: pointer;
+  font-size: 50px;
+}
+.material-card .card-img.fondo .material-icons:before, .material-card .card-img.fondo .material-icons:after {
+  content: "";
+  border-radius: 50%;
+  position: absolute;
+  background-color: #000;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: transform 0.7s cubic-bezier(0.4, 0, 0.2, 1), opacity 75ms linear;
+  transform-origin: center center;
+  transform: scale(0);
+}
+.material-card .card-img.fondo .material-icons.active:after {
+  opacity: 0.16;
+  transform: scale(1.7);
+}
+
 /*
 * Cambio de secciones
 */
@@ -200,13 +300,8 @@
   padding: 0;
 }
 .admin_panel.animate {
-  max-width: 83.3%;
+  max-width: 100%;
   padding: 20px 15px;
-}
-@media only screen and (max-width:758px) {
-  .admin_panel.animate {
-    max-width: 100%;
-  }
 }
 .admin_panel div.animated {
   opacity: 0;
